smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/shape-name-syntax3.smithy
// Parse error at line 4, column 12 near ` `: Expected a valid identifier character, but found ' '
namespace com.foo

structure _ {}
